🚀 add vercel to pack all dependencies

--- a/action.yaml
+++ b/action.yaml
@@ -27,4 +27,4 @@ inputs:
     description: 'Delete files on remote before upload'
 runs:
   using: 'node16'
-  main: 'index.js'
+  main: 'dist/index.js'
