--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Github action for sftp deploy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build": "ncc build index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
     "ssh2-sftp-client": "^7.2.2"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.33.3"
   }
 }
